--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/*! Copyright © 2026 Vynxcode (Tiffany Schuman) All Rights Reserved.  
+/*! Copyright © 2026 Tiffany Schuman, doing business as Vynxcode All Rights Reserved.  
 Licensed under the Vynxcode Proprietary License.  
 See LICENSE for details */ 
 
